fabric: harden surface-to-iron play, add motion authority and opportunity detours
- mining workspace lifecycle: discover or carve a workspace at mining depth,
  transact tool restock through it, reconcile breadcrumb gaps, and repair a
  bounded route suffix when the return path is severed;
- canonical surface return: a recorded trail store, monotonic return traversal,
  staircase climb-out, and one bounded re-anchor when a waypoint goes invalid;
- descent hardening: step arrival and safety validation, committed safe-fall
  launches with liveness deadlines, and water containment sealed at the breach;
- gather-tree traversal: one-stage reachable-seed frontier staging with a single
  same-target replan, and exact inventory completion so a satisfied mission
  target stops selecting more work;
- iron economics: exposure-plane lane planning with owned-drop plane
  restoration, and a goal-aware reserve that keeps the required pickaxe above
  its durability floor and restocks from a reachable workspace;
- motion authority: one writer each for movement, gaze, and interaction,
  promoted to smooth routed locomotion by default and pinned by legacy replay
  corpora;
- EXPLORE frontier liveness: count progress only from grounded waypoint advance
  or a broken block, under non-resetting per-frontier deadlines;
- opportunity layer: a deterministic ledger and route planner admit bounded
  village detours (hay to bread, bed collection, container inspection) and a
  safe iron-golem shortcut, each resuming the interrupted objective and never
  charging the baseline;
- world memory: per-world identity resolution and a persisted store so search
  and opportunity state survive across commands.

Fabric JUnit suite: 1741 tests. Offline suite (node --test) stays green: 442 tests.